--- a/www.nass.gov.ng/afcea8f052546e3ebb2f6c98c8bd09d3bee9ba66.yml
+++ b/www.nass.gov.ng/afcea8f052546e3ebb2f6c98c8bd09d3bee9ba66.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:54:59 GMT
+    - Tue, 20 Jun 2017 11:59:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nT2blKKd31sE-Cr3JoP-D1; path=/
+    - PHPSESSID=1R14wESzvhW4Ck0-8Ja%2CG0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:54:59 GMT
+recorded_at: Tue, 20 Jun 2017 11:59:13 GMT
