--- a/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
+++ b/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:57:53 GMT
+    - Tue, 20 Jun 2017 12:01:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ihgnR2UhToPgvezoP9tXw0; path=/
+    - PHPSESSID=fHN6PApWM7j%2CPE0FapGXj2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:57:53 GMT
+recorded_at: Tue, 20 Jun 2017 12:01:53 GMT
