--- a/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
+++ b/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:58:43 GMT
+    - Tue, 20 Jun 2017 12:03:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nDRs-F0H%2C0LwID%2CaVjIKS1; path=/
+    - PHPSESSID=Lap2pUjXj8xE4kY8dWJVo3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:58:43 GMT
+recorded_at: Tue, 20 Jun 2017 12:03:13 GMT
