--- a/www.nass.gov.ng/1b7d16e778e730dd5c77aaf603cf1029fe089e46.yml
+++ b/www.nass.gov.ng/1b7d16e778e730dd5c77aaf603cf1029fe089e46.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:02:48 GMT
+    - Tue, 20 Jun 2017 12:06:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3PVrIARfs%2C0seCNdVs%2CxK1; path=/
+    - PHPSESSID=fvzqKhgrfvIrS6VtMTuJq2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:02:48 GMT
+recorded_at: Tue, 20 Jun 2017 12:06:03 GMT
