--- a/www.nass.gov.ng/6ec4aa184de090f30a6896d6065a210e6d74a866.yml
+++ b/www.nass.gov.ng/6ec4aa184de090f30a6896d6065a210e6d74a866.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:05:06 GMT
+    - Tue, 20 Jun 2017 12:08:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YY93jdji%2COjMh38m4mZDA1; path=/
+    - PHPSESSID=p-96paPGkDy7KkVSsOoAv3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:05:06 GMT
+recorded_at: Tue, 20 Jun 2017 12:08:24 GMT
