--- a/www.nass.gov.ng/c0cf0551b470d3720a59c389ad33898ac6e75aff.yml
+++ b/www.nass.gov.ng/c0cf0551b470d3720a59c389ad33898ac6e75aff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:09:39 GMT
+    - Tue, 20 Jun 2017 12:12:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rFJd6G113I3OofqsiqtGR3; path=/
+    - PHPSESSID=RDhf58VFR%2Cg4RC1a3kGgk1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:09:39 GMT
+recorded_at: Tue, 20 Jun 2017 12:12:39 GMT
