--- a/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
+++ b/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:11:55 GMT
+    - Tue, 20 Jun 2017 12:15:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2C8PkWOdMRyDq7xhpGRID3; path=/
+    - PHPSESSID=7BV6Z%2C3MMib8Ten1dMf%2Ck0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:11:55 GMT
+recorded_at: Tue, 20 Jun 2017 12:15:14 GMT
