--- a/www.nass.gov.ng/33f057529263cc6b439afabcef8497aff6474bc8.yml
+++ b/www.nass.gov.ng/33f057529263cc6b439afabcef8497aff6474bc8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:16:19 GMT
+    - Tue, 20 Jun 2017 12:20:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RKtNnpKQwtwS1i5E9ZufK1; path=/
+    - PHPSESSID=4rnwyq%2CxwTvhxxsT1hec11; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:16:19 GMT
+recorded_at: Tue, 20 Jun 2017 12:20:45 GMT
