--- a/www.nass.gov.ng/a1b709ed4ecb4e5e1b2d1fbff2083029dadfb3f2.yml
+++ b/www.nass.gov.ng/a1b709ed4ecb4e5e1b2d1fbff2083029dadfb3f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:19:11 GMT
+    - Tue, 20 Jun 2017 12:23:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=s7nHRkWKusvUB56rSeWjl2; path=/
+    - PHPSESSID=AMRI%2Ct8Sh2eNJHM7CYWAu0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:19:11 GMT
+recorded_at: Tue, 20 Jun 2017 12:23:32 GMT
