--- a/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
+++ b/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:19:47 GMT
+    - Tue, 20 Jun 2017 12:23:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Z%2Ca7rBVBhv5Y9WXBPuMGb1; path=/
+    - PHPSESSID=kVFgrg6FpR3AC0kallriN1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:19:47 GMT
+recorded_at: Tue, 20 Jun 2017 12:23:59 GMT
