--- a/www.nass.gov.ng/313a147f3138c592bbd1676a6657de9ec2111879.yml
+++ b/www.nass.gov.ng/313a147f3138c592bbd1676a6657de9ec2111879.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:21:14 GMT
+    - Tue, 20 Jun 2017 12:25:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-k1j%2CmXgV3ra737dhQLJx2; path=/
+    - PHPSESSID=IpZ8hDreasFzvduBCwJrL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:21:14 GMT
+recorded_at: Tue, 20 Jun 2017 12:25:06 GMT
