--- a/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
+++ b/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:22:13 GMT
+    - Tue, 20 Jun 2017 12:25:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YK66I-p8l40fBim%2CsjVP62; path=/
+    - PHPSESSID=R%2C5RGE9FbDxO5GyO3uJm71; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:22:13 GMT
+recorded_at: Tue, 20 Jun 2017 12:25:55 GMT
