--- a/www.nass.gov.ng/207a46d925fc4b4f5cbd9e7584ef3890bdefe634.yml
+++ b/www.nass.gov.ng/207a46d925fc4b4f5cbd9e7584ef3890bdefe634.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:23:50 GMT
+    - Tue, 20 Jun 2017 12:27:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e-lbinEGpc0tni2CE75030; path=/
+    - PHPSESSID=yZfcQIJlNZX%2CODtHmRzra0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:23:50 GMT
+recorded_at: Tue, 20 Jun 2017 12:27:36 GMT
