--- a/www.nass.gov.ng/4ac8475857a42d87131e1f85f470118f720e3baf.yml
+++ b/www.nass.gov.ng/4ac8475857a42d87131e1f85f470118f720e3baf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:28:42 GMT
+    - Tue, 20 Jun 2017 12:31:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b%2CsN12X076xI-Yc6EpuaI2; path=/
+    - PHPSESSID=zV5wuXD5QUMzN7Xk12nhT3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:28:42 GMT
+recorded_at: Tue, 20 Jun 2017 12:31:16 GMT
