--- a/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
+++ b/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:32:43 GMT
+    - Tue, 20 Jun 2017 12:36:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CBLN1pQMKjeIsbhqT497y3; path=/
+    - PHPSESSID=fzhQ0%2CeByc31hUzZ3Dgfm0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:32:43 GMT
+recorded_at: Tue, 20 Jun 2017 12:36:10 GMT
