--- a/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
+++ b/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 16:36:32 GMT
+    - Tue, 20 Jun 2017 12:38:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vUxXxKv2o4ZqGFX54C0Xd2; path=/
+    - PHPSESSID=%2CW%2CGNm8UJZx2GUL7kYzPs1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 16:36:32 GMT
+recorded_at: Tue, 20 Jun 2017 12:38:35 GMT
