--- a/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
+++ b/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 07:57:26 GMT
+    - Wed, 21 Jun 2017 00:59:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=D22WgHhqk0Gg%2CCCcGUk5E0; path=/
+    - PHPSESSID=Ij0L3JIbnoarye7jAlq7l3; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 07:57:27 GMT
+recorded_at: Wed, 21 Jun 2017 00:59:26 GMT
