--- a/www.nass.gov.ng/521892477dce86567b63355160ecde1a76eeecf5.yml
+++ b/www.nass.gov.ng/521892477dce86567b63355160ecde1a76eeecf5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 07:59:27 GMT
+    - Wed, 21 Jun 2017 01:01:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=v1DVj-J71KjMjNUkn8DFg3; path=/
+    - PHPSESSID=8lxgZOXzqx8%2CiJPmu2-pu0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 07:59:27 GMT
+recorded_at: Wed, 21 Jun 2017 01:01:17 GMT
