--- a/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
+++ b/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:01:47 GMT
+    - Wed, 21 Jun 2017 01:04:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PT%2CRzQwuVVhPzZ84c7b112; path=/
+    - PHPSESSID=gFxYVo7NpTgdhS6ItSKEl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:01:48 GMT
+recorded_at: Wed, 21 Jun 2017 01:04:14 GMT
