--- a/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
+++ b/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:04:40 GMT
+    - Wed, 21 Jun 2017 01:07:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xFP%2CWnhrLEl4NOXyX4ChT1; path=/
+    - PHPSESSID=f2ejAFvOF3643V1Dt7hJe0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:04:40 GMT
+recorded_at: Wed, 21 Jun 2017 01:07:51 GMT
