--- a/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
+++ b/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:05:38 GMT
+    - Wed, 21 Jun 2017 01:09:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xTDser2pLKQ0L-vdzrYHj3; path=/
+    - PHPSESSID=SnmUwX58UWN%2CUkv2hVo%2CP1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:05:38 GMT
+recorded_at: Wed, 21 Jun 2017 01:09:21 GMT
