--- a/www.nass.gov.ng/6a2c74f8eef443b94d2af366bd22c1af489f47b1.yml
+++ b/www.nass.gov.ng/6a2c74f8eef443b94d2af366bd22c1af489f47b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:10:04 GMT
+    - Wed, 21 Jun 2017 01:13:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iOiZ2LOmtSZh5z8pqKEU71; path=/
+    - PHPSESSID=%2CxmtAsKuoLrngbyogqBZc1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:10:04 GMT
+recorded_at: Wed, 21 Jun 2017 01:13:52 GMT
