--- a/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
+++ b/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:12:42 GMT
+    - Wed, 21 Jun 2017 01:15:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E3G3obt3Waufp0JoHFKuN0; path=/
+    - PHPSESSID=nNwrVliqeLt%2CkcndgkD4L1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:12:42 GMT
+recorded_at: Wed, 21 Jun 2017 01:15:55 GMT
