--- a/www.nass.gov.ng/8de3f8fc132f3194e7c4d99803ece30bb80ccd67.yml
+++ b/www.nass.gov.ng/8de3f8fc132f3194e7c4d99803ece30bb80ccd67.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:12:59 GMT
+    - Wed, 21 Jun 2017 01:16:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=abaZXJRos06paKJU0oq2I1; path=/
+    - PHPSESSID=b24NmnmmO%2C7Btc7ig0XBB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:13:01 GMT
+recorded_at: Wed, 21 Jun 2017 01:16:57 GMT
