--- a/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
+++ b/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:17:23 GMT
+    - Wed, 21 Jun 2017 01:22:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9pl693xpW8dbUM-%2C3OMrh3; path=/
+    - PHPSESSID=7BXytKLFjByZloaBM4Bp72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:17:23 GMT
+recorded_at: Wed, 21 Jun 2017 01:22:00 GMT
