--- a/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
+++ b/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:19:41 GMT
+    - Wed, 21 Jun 2017 01:24:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x5QX2AOpD-lMXco8RbTYL3; path=/
+    - PHPSESSID=3n%2C71vom-kJvonXMU-Rsq1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:19:41 GMT
+recorded_at: Wed, 21 Jun 2017 01:24:43 GMT
