--- a/www.nass.gov.ng/f1d0a4734bfef15c605c9909b5db4c7f1fe6c99b.yml
+++ b/www.nass.gov.ng/f1d0a4734bfef15c605c9909b5db4c7f1fe6c99b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:24:58 GMT
+    - Wed, 21 Jun 2017 01:29:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=71YCErbGnoIS5igr8xbWO0; path=/
+    - PHPSESSID=QUAXWjFaKQz90NB00H%2Cyu0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:24:58 GMT
+recorded_at: Wed, 21 Jun 2017 01:29:58 GMT
