--- a/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
+++ b/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:25:31 GMT
+    - Wed, 21 Jun 2017 01:30:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RzZebLrKmdzo4r%2CDdzN6i2; path=/
+    - PHPSESSID=TKPd4swLLnSL6Gsbuh4nb1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:25:31 GMT
+recorded_at: Wed, 21 Jun 2017 01:30:32 GMT
