--- a/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
+++ b/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:28:43 GMT
+    - Wed, 21 Jun 2017 01:34:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j%2CcSgJ2nxeHyjEGRwlFe92; path=/
+    - PHPSESSID=pufgbWO5pRZJTmBJBs6561; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:28:43 GMT
+recorded_at: Wed, 21 Jun 2017 01:34:24 GMT
