--- a/www.nass.gov.ng/4204f29f23a607680fdf5473a8f5c9b4db40bc7d.yml
+++ b/www.nass.gov.ng/4204f29f23a607680fdf5473a8f5c9b4db40bc7d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:34:28 GMT
+    - Wed, 21 Jun 2017 01:40:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ad2QEH2K9N4ZkEmOF8OPb3; path=/
+    - PHPSESSID=0tGA%2CcfxpuA3Lv6nGU6HV3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:34:28 GMT
+recorded_at: Wed, 21 Jun 2017 01:40:12 GMT
