--- a/www.nass.gov.ng/d2ab87c5c04ea37340ba6643e9b66bba86faf62f.yml
+++ b/www.nass.gov.ng/d2ab87c5c04ea37340ba6643e9b66bba86faf62f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:35:30 GMT
+    - Wed, 21 Jun 2017 01:41:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w6dfb73nm25vUfSMK2uGI1; path=/
+    - PHPSESSID=i5InY-4%2CMbc0NF6VF4gvh1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:35:30 GMT
+recorded_at: Wed, 21 Jun 2017 01:41:10 GMT
