--- a/www.nass.gov.ng/4e7121cbdd047080bd98e4708d51f0685778c8cd.yml
+++ b/www.nass.gov.ng/4e7121cbdd047080bd98e4708d51f0685778c8cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:36:52 GMT
+    - Wed, 21 Jun 2017 01:42:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ulpnyek75Fndv4AidukQh2; path=/
+    - PHPSESSID=Sg9j%2C66-DR9Aso2pkM52q2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:36:52 GMT
+recorded_at: Wed, 21 Jun 2017 01:42:01 GMT
