--- a/www.nass.gov.ng/58ea058c2eef55fd37862f67b5862d0b2e987e2b.yml
+++ b/www.nass.gov.ng/58ea058c2eef55fd37862f67b5862d0b2e987e2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:39:00 GMT
+    - Wed, 21 Jun 2017 01:45:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VEzmVK897Mx72MeaIWts93; path=/
+    - PHPSESSID=YWKl%2CRu06ZIGAfgN9kGW91; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:39:00 GMT
+recorded_at: Wed, 21 Jun 2017 01:45:39 GMT
