--- a/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
+++ b/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:45:09 GMT
+    - Wed, 21 Jun 2017 01:50:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xlfEknI2iVFbBrCeJ%2CzKQ0; path=/
+    - PHPSESSID=HHd6Xp6TrXCwC9ltYeN3B2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:45:09 GMT
+recorded_at: Wed, 21 Jun 2017 01:50:05 GMT
