--- a/www.nass.gov.ng/8963db36243ad69fab651a024c206e2570e97b00.yml
+++ b/www.nass.gov.ng/8963db36243ad69fab651a024c206e2570e97b00.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:45:49 GMT
+    - Wed, 21 Jun 2017 01:50:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EUABSWkKIT0a-n2dHzJXp0; path=/
+    - PHPSESSID=Ivo1068uPcwNwTTrR%2ChFG3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:45:49 GMT
+recorded_at: Wed, 21 Jun 2017 01:50:28 GMT
