--- a/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
+++ b/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:52:51 GMT
+    - Wed, 21 Jun 2017 01:57:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gBOmZrQp8md-cBH%2CTFavJ0; path=/
+    - PHPSESSID=9clghpRIf6Wq9WLGXXSF10; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:52:51 GMT
+recorded_at: Wed, 21 Jun 2017 01:57:00 GMT
