--- a/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
+++ b/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:58:23 GMT
+    - Wed, 21 Jun 2017 02:02:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ABIbGj2jnn%2CZ1Q-LtEfxo3; path=/
+    - PHPSESSID=VZ62B7I7Xapqnf3elTGwP2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:58:23 GMT
+recorded_at: Wed, 21 Jun 2017 02:02:52 GMT
