--- a/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
+++ b/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 08:59:07 GMT
+    - Wed, 21 Jun 2017 02:03:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZR-%2CmiNdRm8tfnblsWaQT2; path=/
+    - PHPSESSID=xNwrZWf7qASkPwRX1jF0i1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 08:59:07 GMT
+recorded_at: Wed, 21 Jun 2017 02:03:56 GMT
