--- a/www.nass.gov.ng/2d79be661077c569c931ceb706ba2120e5a4355b.yml
+++ b/www.nass.gov.ng/2d79be661077c569c931ceb706ba2120e5a4355b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:02:06 GMT
+    - Wed, 21 Jun 2017 02:06:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sNFm0l%2C03YMug4oDROw%2Cn2; path=/
+    - PHPSESSID=z6W6wCFzv41MakfGA0Ayd1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:02:06 GMT
+recorded_at: Wed, 21 Jun 2017 02:06:24 GMT
