--- a/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
+++ b/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:02:32 GMT
+    - Wed, 21 Jun 2017 02:07:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4TihSNk%2CpqsmmXfHsMp7E2; path=/
+    - PHPSESSID=KmGyL8sTTdzNALEQjqmFA2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:02:32 GMT
+recorded_at: Wed, 21 Jun 2017 02:07:20 GMT
